refactor: added @OverRide in services impl in ride-service